cluster/prod/apps/media/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-public
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: public
  tls:
    - hosts: ["jellyfin.lysakermoen.com"]
      secretName: jellyfin-tls
  rules:
    - host: jellyfin.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-public
spec:
  ingressClassName: public
  tls:
    - hosts: ["jellyseerr.lysakermoen.com"]
      secretName: jellyseerr-tls
  rules:
    - host: jellyseerr.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: ["qbittorrent.k8s.lysakermoen.com"]
      secretName: qbittorrent-internal-tls
  rules:
    - host: qbittorrent.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: ["sonarr.k8s.lysakermoen.com"]
      secretName: sonarr-internal-tls
  rules:
    - host: sonarr.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: ["radarr.k8s.lysakermoen.com"]
      secretName: radarr-internal-tls
  rules:
    - host: radarr.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: ["prowlarr.k8s.lysakermoen.com"]
      secretName: prowlarr-internal-tls
  rules:
    - host: prowlarr.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  tls:
    - hosts: ["bazarr.k8s.lysakermoen.com"]
      secretName: bazarr-internal-tls
  rules:
    - host: bazarr.k8s.lysakermoen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
